2009-03-05  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* help/doc/cvsanaly.texi:

	Start documenting the database design.
	
2009-03-05  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/Database.py:

	Remove file_id and commit_id from the promary key of the actions
	table.
	
2009-03-05  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/main.py:

	Remove trailing '/' of the given uri.
	
2009-03-04  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Do not find programs in PATH more than once.
	
2009-03-04  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Handle Command exceptions due to problems when running commands.
	
2009-03-04  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/Command.py:

	Updated from misc. Several error handling improvements.
	
2009-03-04  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Skip files that are out of the repository root.
	
2009-03-04  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/Command.py:
	* pycvsanaly2/extensions/Metrics.py:

	Add Commands module from misc, and use it in Metrics extension
	instead of the commands module.
	
2009-03-04  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/DBProxyContentHandler.py:

	Add debug messages to ProxyContentHandler.
	
2009-03-04  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/main.py:

	Remove unneeded import.
	
2009-03-03  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/DBContentHandler.py:

	Fix infinite loop when a path has been renamed several times to
	the same name.
	
2009-03-03  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Add debug messages when skipping files.
	
2009-03-03  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/extensions/file_types.py:

	Add RELEASING and Doxyfile as devel-doc files.
	
2009-03-03  Carlos Garcia Campos  <carlosgc@gsyc.es>
